1-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: web
  namespace: web-ns
  labels:
    app: frontend-app
spec:
  containers:
    - name: nginx
      image: nginx
