4-service.yml
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  clusterIP: "None"
  selector:
    app: db
